# simple-browser

./: Dockerfile  Dockerfile.server  README.md  docker-compose.yml
browser/: Cargo.toml
browser/core/src/: http.rs  url.rs  utils.rs
browser/core/src/renderer/: mod.rs  page.rs
browser/core/src/renderer/css/: cssom.rs  mod.rs  parser.rs  token.rs
browser/core/src/renderer/dom/: node.rs
browser/core/src/renderer/html/: dom.rs  mod.rs  parser.rs  token.rs
browser/core/src/renderer/html/helper/: api.rs  mod.rs
browser/core/src/renderer/js/: ast.rs  runtime.rs  token.rs
browser/core/src/renderer/layout/: computed_style.rs  layout_object.rs  layout_view.rs
browser/net/std/: Cargo.toml
browser/net/std/src/: http.rs
browser/src/: handler.rs  main.rs
browser/ui/cui/: Cargo.toml
browser/ui/cui/src/: app.rs
browser/ui/gui/: Cargo.toml
browser/ui/gui/src/: app.rs
server/: index.html
