[package]
name = "browser"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["core", "net/std"]

[features]
default = ["cui"]
cui = ["dep:net_std"]

[[bin]]
name = "saba"
path = "src/main.rs"
required-features = ["cui"]

[dependencies]
browser_core = { path = "./core" }
net_std = { path = "./net/std", optional = true}
